// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test.hbs - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style>
    .a {color:    red}
        .b {color:    red}
</style>

<span><style>
    .a {color:    red}
        .b {color:    red}
</style></span>

=====================================output=====================================
<style>
    .a {color:    red}
        .b {color:    red}
</style>

<span><style>
    .a {color:    red}
        .b {color:    red}
</style></span>
================================================================================
`;

exports[`test.hbs - {"htmlWhitespaceSensitivity":"ignore","embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
htmlWhitespaceSensitivity: "ignore"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style>
    .a {color:    red}
        .b {color:    red}
</style>

<span><style>
    .a {color:    red}
        .b {color:    red}
</style></span>

=====================================output=====================================
<style>
  .a {color:    red}
        .b {color:    red}
</style>

<span>
  <style>
    .a {color:    red}
        .b {color:    red}
  </style>
</span>
================================================================================
`;

exports[`test.hbs - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style>
    .a {color:    red}
        .b {color:    red}
</style>

<span><style>
    .a {color:    red}
        .b {color:    red}
</style></span>

=====================================output=====================================
<style>
  .a {
    color: red;
  }
  .b {
    color: red;
  }
</style>

<span>
  <style>
    .a {
      color: red;
    }
    .b {
      color: red;
    }
  </style>
</span>
================================================================================
`;

exports[`test.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<style>
    .a {color:    red}
        .b {color:    red}
</style>

<span><style>
    .a {color:    red}
        .b {color:    red}
</style></span>

=====================================output=====================================
<style>
  .a {
    color: red;
  }
  .b {
    color: red;
  }
</style>

<span><style>
    .a {
      color: red;
    }
    .b {
      color: red;
    }
  </style></span>
================================================================================
`;
